Updated various versions of 3rd-party libraries and tools
Replaced deprecated API calls with new ones.